--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     
-    <h1><center>My first website ... Just for learning</center></h1>
+    <h1><center>HTML website ...  Just for chaking</center></h1>
       <table cellspacing="20">
         <tr>
             <td>
